Harmonize fullstack.yml with khanh's playbooks.

--- a/fullstack.yml
+++ b/fullstack.yml
@@ -3,34 +3,15 @@
   hosts: "{{ ansible_target }}"
   #hosts: localhost
   vars_files:
-    - vars.yml
+    - vars-full.yml
     - private.yml
 
-  environment:
-    SECRET_KEY_BASE: "{{ rails_secret }}"
-
-  #handlers:
-  #  - name: restart postgresql
-  #    become: yes
-  #    service: name=postgresql state=restarted
-
-  #tasks:
-    #- name: disable selinux
-    #  become: yes
-    #  replace: dest=/etc/selinux/config regexp='^SELINUX=enforcing' replace='SELINUX=disabled'
-    #  tags: selinux
-
-    #- name: restart selinux
-    #  become: yes
-    #  service: name=selinux state=restarted
-
   roles:
-    - { role: fits, become: yes }
-    - { role: druw-fullstack, become: yes }
+    - { role: fits, become: yes, tags: ['fits']}
+    - { role: druw-fullstack, become: yes, tags: ['druw'] }
     - { role: postgresql, become: yes, tags: ['postgres'] }
-    - { role: redis, become: yes }
-    - { role: tomcat }
-    - { role: fedora, tags: ['fedora'] }
+    - { role: redis, become: yes, tags: ['redis'] }
+    #- { role: tomcat }
+    - { role: fedora, become: true, tags: ['fedora'] }
     - { role: solr, tags: ['solr'] }
     - { role: apache, tags: ['apache'] }
-    #- { role: ffmpeg, tags: ffmpeg }
