--- a/vars.yml.template
+++ b/vars.yml.template
@@ -1,8 +1,9 @@
 application_home: /home/vagrant/druw
-fits_version: 1.0.5
-install_path: /usr/local/bin
+fits_version: 1.2.0
+fits_install_path: /usr/local
 ansible_target: localhost
 #ansible_target: demoserver
 ruby_version: 2.4.2
 rails_version: 5.0.6
+ffmpeg_version: 3.3.4
 config_path: "{{ application_home }}/config" 
